<resources>
    <string name="app_name">HiFoodDeliveries</string>
    <string name="deliveries">Deliveries</string>
    <string name="addImageHere">Add Some Images Here</string>
    <string name="add_for_delivery">Add For Delivery</string>
    <string name="enterPrice">Enter Price</string>
    <string name="enter_the_name_of_the_item">Enter The Name Of The Item</string>
    <string name="additional_details_if_any">Additional Details (If Any)</string>
    <string name="addNewFoodItem">Add New Food Items</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="reenterpassword">Re-Enter Password</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="chicken_bao">Chicken Bao</string>
    <string name="fried_chicken_bao">Fried Chicken Bao</string>
    <string name="large_beef_submarine">Large Beef Submarine</string>
    <string name="with_chips">With Chips</string>
    <string name="with_omlet">With omlet</string>
    <string name="without_chips">Without Chips</string>
    <string name="without_omlet">Without Omlet</string>
    <string name="devilled_chicken">Devilled Chicken</string>
    <string name="edit">Edit</string>
    <string name="edit2">Edit</string>
    <string name="edit3">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete2">Delete</string>
    <string name="delete3">Delete</string>
    <string name="my_order_number">My Order Number</string>
    <string name="complaint">Complaint</string>
    <string name="enter_your_order_number">Enter Your Order Number</string>
    <string name="enter_your_complaint_details">Enter Your Complaint Details</string>
    <string name="order_complaints">Order Complaints</string>
    <string name="backbtn"><![CDATA[<]]></string>
    <string name="checkout">CHECKOUT</string>
    <string name="view">View</string>
    <string name="view01">View</string>
    <string name="fried_chicken_bao01">Fried Chicken Bao</string>
    <string name="chicken_bao01">Chicken Bao</string>
    <string name="your_cart">Your Cart</string>
    <string name="type_your_instruction_here">Type your instruction here..</string>
    <string name="instructions">Instructions</string>
    <string name="rs_650">Rs.650</string>
    <string name="rs_700">Rs.700</string>
    <string name="devilled_chicken001">Devilled Chicken</string>
    <string name="roasted_chicken">Roasted Chicken</string>
    <string name="large_beef_submarinecart">Large Beef Submarine</string>
    <string name="add_to_bag">Add To Bag</string>
    <string name="rating">Rating</string>
    <string name="rate_1_to_5">Rate 1 to 5</string>
    <string name="total_deliveries">Total deliveries</string>
    <string name="Deliveries">Deliveries</string>
    <string name="we_deliver_to_your_door_step">We Deliver to your door step</string>
    <string name="menu_list">Menu List</string>
    <string name="manage_delivery_staff">Manage Delivery Staff</string>
    <string name="delivery_status">Delivery Status</string>
    <string name="order_list">Order List</string>
    <string name="hi_admin">Hi Admin !</string>
    <string name="new_orders">New Orders</string>
    <string name="order_001358">Order : 001358</string>
    <string name="order_001359">Order : 001359</string>
    <string name="chicken_biriyani_1qty">Chicken Biriyani - 1qty</string>
    <string name="beef_cheese_dolphin_1qty">Beef Cheese Dolphin - 1qty</string>
    <string name="beef_devilled_1qty">Beef Devilled - 1qty</string>
    <string name="fry_fish_2_qty">Fry Fish - 2 qty</string>
    <string name="select_deliverer">Select Deliverer</string>
    <string name="george">George</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="backbutton"><![CDATA[>]]></string>
    <string name="confirm_order">Confirm Order</string>
    <string name="hilton_hotel_resorts"><![CDATA[Hilton Hotel & Resorts]]></string>
    <string name="colombo_2_sir_chittabalam_gardiner_mw">Colombo 2 , Sir Chittabalam Gardiner Mw</string>
    <string name="wellawatte_colombo_6_default_location">Wellawatte Colombo 6 ( default location )</string>
    <string name="my_delivery_address">My Delivery Address</string>
    <string name="deliver">Deliver</string>
    <string name="deliver_options">Deliver Options</string>
    <string name="deliver_note">Deliver Note</string>
    <string name="card_payment">Card Payment</string>
    <string name="cash_payment">Cash Payment</string>
    <string name="deliver_now">Deliver Now</string>
    <string name="meet_at_door">Meet at door</string>
    <string name="space1">---------------------------------------</string>
    <string name="space2">---------------------------------------</string>
    <string name="customernote">Ex:Call before drop off</string>
    <string name="order_summary">Order Summary</string>
    <string name="payment_method">Payment Method</string>
    <string name="sub_total">Sub Total</string>
    <string name="rs">Rs.</string>
    <string name="rs2">Rs.</string>
    <string name="rs3">Rs.</string>
    <string name="delivery_fee_8_4_km">Delivery fee(8.4 KM)</string>
    <string name="total">Total</string>
    <string name="_1_items">1 items</string>
    <string name="confirm">Confirm</string>
    <string name="select1"><![CDATA[<]]></string>
    <string name="select2"><![CDATA[>]]></string>
    <string name="select3"><![CDATA[>]]></string>
    <string name="col1">ID</string>
    <string name="col2">Name</string>
    <string name="col3">Phone</string>
    <string name="col4">Address</string>
    <string name="col5">edit</string>

    <string name="row1ID">001</string>
    <string name="row1Name">Dilshan</string>
    <string name="row1Phone">0771234567</string>
    <string name="row1Address">Pelawatta rd,Battaramulla</string>
    <string name="row1Edit"></string>

    <string name="row2ID">002</string>
    <string name="row2Name">Krishan</string>
    <string name="row2Phone">077123553</string>
    <string name="row2Address">MainStreet,Rajagiriya</string>
    <string name="row2Edit"></string>
        <string name="nav_open">Open</string>
        <string name="nav_close">Close</string>

</resources>

