<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewRidersActivity">


  <TableLayout
      android:layout_width="wrap_content"
      android:layout_height="141dp"
      android:layout_alignParentStart="true"
      android:layout_alignParentTop="true"
      android:layout_alignParentEnd="true"
      android:layout_alignParentBottom="true"
      android:layout_centerHorizontal="true"
      android:layout_marginStart="0dp"
      android:layout_marginTop="346dp"
      android:layout_marginEnd="5dp"
      android:layout_marginBottom="116dp"
      android:background="@color/white">

    <TableRow android:background="@color/purple_200">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="2"
          android:gravity="center_horizontal"
          android:padding="5sp"
          android:text="@string/col1"
          android:textColor="@color/white"
          android:textSize="8sp" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="3"
          android:gravity="center_horizontal"
          android:padding="5sp"
          android:text="@string/col2"
          android:textColor="@color/white"
          android:textSize="8sp" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="3"
          android:gravity="center_horizontal"
          android:padding="5sp"
          android:text="@string/col3"
          android:textColor="@color/white"
          android:textSize="8sp" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="5"
          android:gravity="center_horizontal"
          android:padding="5sp"
          android:text="@string/col4"
          android:textColor="@color/white"
          android:textSize="8sp" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="2"
          android:gravity="center_horizontal"
          android:padding="5sp"
          android:text="@string/col5"
          android:textColor="@color/white"
          android:textSize="8sp" />
    </TableRow>

    <TableRow>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="2"
          android:gravity="center_horizontal"
          android:padding="10sp"
          android:text="@string/row1ID"
          android:textSize="8sp" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="3"
          android:gravity="center_horizontal"
          android:padding="10sp"
          android:text="@string/row1Name"
          android:textSize="8sp" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="3"
          android:gravity="center_horizontal"
          android:padding="10sp"
          android:text="@string/row1Phone"
          android:textSize="8sp" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="3"
          android:gravity="center_horizontal"
          android:padding="10sp"
          android:text="@string/row1Address"
          android:textSize="8sp" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="3"
          android:gravity="center_horizontal"
          android:padding="10sp"
          android:text="@string/row1Edit"
          android:textSize="8sp" />

      <ImageButton
          android:id="@+id/imageButton4"
          android:layout_width="36dp"
          android:layout_height="match_parent"
          android:contentDescription="@string/add_to_bag"
          app:srcCompat="@drawable/ic_baseline_edit_note_24"
          tools:ignore="TouchTargetSizeCheck" />

    </TableRow>

    <TableRow>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:layout_weight="2"
          android:gravity="center_horizontal"
          android:padding="10sp"
          android:text="@string/row2ID"
          android:textSize="8sp" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="3"
          android:gravity="center_horizontal"
          android:padding="10sp"
          android:text="@string/row2Name"
          android:textSize="8sp" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="3"
          android:gravity="center_horizontal"
          android:padding="10sp"
          android:text="@string/row2Phone"
          android:textSize="8sp" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="5"
          android:gravity="center_horizontal"
          android:padding="10sp"
          android:text="@string/row2Address"
          android:textSize="8sp" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="3"
          android:gravity="center_horizontal"
          android:padding="10sp"
          android:text="@string/row2Edit"
          android:textSize="8sp" />

      <ImageButton
          android:id="@+id/imageButton5"
          android:layout_width="23dp"
          android:layout_height="match_parent"
          android:layout_alignParentEnd="true"
          android:contentDescription="@string/addNewFoodItem"
          app:srcCompat="@drawable/ic_baseline_edit_note_24"
          tools:ignore="TouchTargetSizeCheck" />
    </TableRow>
  </TableLayout>

  <ImageView
      android:id="@+id/imageView9"
      android:layout_width="match_parent"
      android:layout_height="236dp"

      android:layout_alignParentStart="true"
      android:layout_alignParentTop="true"
      android:layout_marginStart="0dp"
      android:layout_marginTop="2dp"
      android:layout_marginBottom="37dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:srcCompat="@drawable/blueone"
      tools:layout_editor_absoluteY="-70dp" />

  <TextView
      android:id="@+id/textView"
      android:layout_width="245dp"
      android:layout_height="74dp"
      android:layout_alignParentTop="true"
      android:layout_alignParentEnd="true"
      android:layout_marginTop="7dp"
      android:layout_marginEnd="98dp"
      android:fontFamily="cursive"
      android:text="Rider Zone"
      android:textColor="#ffffff"
      android:textSize="45sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="@+id/imageView9"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.731"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.134" />

  <ImageView
      android:id="@+id/imageView4"
      android:layout_width="53dp"
      android:layout_height="42dp"
      android:layout_alignParentStart="true"
      android:layout_alignParentTop="true"
      android:layout_alignParentEnd="true"
      android:layout_alignParentBottom="true"
      android:layout_marginStart="0dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="358dp"
      android:layout_marginBottom="545dp"
      app:srcCompat="@drawable/ic_baseline_menu_24" />

  <ImageView
      android:id="@+id/imageView6"
      android:layout_width="42dp"
      android:layout_height="56dp"
      android:layout_alignParentStart="true"
      android:layout_marginStart="354dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:layout_weight="1"
      app:srcCompat="@drawable/ic_baseline_search_24" />

  <TextView
      android:id="@+id/textView14"
      android:layout_width="205dp"
      android:layout_height="52dp"
      android:layout_alignBottom="@+id/imageView9"
      android:layout_alignParentStart="true"
      android:layout_alignParentTop="true"
      android:layout_alignParentEnd="true"
      android:layout_marginStart="9dp"
      android:layout_marginTop="118dp"
      android:layout_marginEnd="197dp"
      android:layout_marginBottom="68dp"
      android:text="Our Delivery Boys Details"
      android:textColor="#000000"
      android:textSize="20sp"
      android:textStyle="bold" />

  <ImageView
      android:id="@+id/imageView11"
      android:layout_width="169dp"
      android:layout_height="146dp"
      android:layout_alignBottom="@+id/imageView9"
      android:layout_alignParentStart="true"
      android:layout_alignParentTop="true"
      android:layout_alignParentEnd="true"
      android:layout_marginStart="246dp"
      android:layout_marginTop="86dp"
      android:layout_marginEnd="-4dp"
      android:layout_marginBottom="6dp"
      app:srcCompat="@drawable/bicker" />

  <Button
      android:id="@+id/button3"
      android:layout_width="wrap_content"
      android:layout_height="50dp"
      android:layout_alignParentStart="true"
      android:layout_alignParentTop="true"
      android:layout_alignParentEnd="true"
      android:layout_centerHorizontal="true"
      android:layout_centerVertical="false"
      android:layout_marginTop="262dp"
      android:layout_marginBottom="300dp"
      android:text="Add New member" />

</RelativeLayout>